[package]
name = "freeradiantbunny"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
async-std = "1.10.0"
chrono = "0.4"
http = "0.2"
rand = "0.8.5"
regex = "1.9.1"
sha2 = "0.9.5"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
vec_map = "0.8.2"

[profile.dev]
lto = "off"
panic = "abort"
incremental = false
